--- a/server/views/music/add.ejs
+++ b/server/views/music/add.ejs
@@ -1,6 +1,13 @@
-<%- include('../partials/header.ejs') %>
-<%- include('../partials/navbar.ejs') %>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title><%= title %></title>
+</head>
+<body>
+    <p>Hello test</p>
+</body>
+</html>
+<!--
 <!-- Content for the Add page -->
 <div class="container">
     <div class="row">
@@ -52,5 +59,6 @@
 
     </div>
 </div>
+-->
 
-    <%- include('../partials/footer.ejs') %>
+
