Fixed CRUD functionality to work with new database
- Create, read, update, delete functionality is now fully implemented
- Visual changes to come for the create, read, and update pages

--- a/server/views/music/list.ejs
+++ b/server/views/music/list.ejs
@@ -22,6 +22,8 @@
             <td class ="text-center col-2"><%= MusicList[count].album %></td>
             <td class ="text-center col-2"><%= MusicList[count].year %></td>
             <td class ="text-center col-2"><%= MusicList[count].length %></td>
+            <td class ="text-center col-1"><a href="/music/edit/<%= MusicList[count]._id %>" class="btn btn-warning btn-sm"> Edit </a></td>
+            <td class ="text-center col-1"><a href="/music/delete/<%= MusicList[count]._id %>" class="btn btn-warning btn-sm"> Delete </a></td>
           </tr>
         <% } %>
         </tr>
