--- a/server/views/music/add.ejs
+++ b/server/views/music/add.ejs
@@ -4,61 +4,64 @@
     <title><%= title %></title>
 </head>
 <body>
-    <p>Hello test</p>
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-3 col-md-6">
+                <h1><%= title %></h1>
+                <form class="form" method="POST">
+                    <div class="form-group">
+                        <label for="titleTextField">Title</label>
+                        <input type="text" class="form-control"
+                        id="titleTextField"
+                        placeholder="Title"
+                        name="title" required>
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="studioTextField">Artist</label>
+                        <input type="text" class="form-control"
+                        id="studioTextField"
+                        placeholder="Name of production studio"
+                        name="artist" required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="yearTextField">Album</label>
+                        <input type="text" class="form-control"
+                        id="yearTextField"
+                        placeholder="Album"
+                        name="album," required>
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="yearTextField">Year</label>
+                        <input type="text" class="form-control"
+                        id="yearTextField"
+                        placeholder="Year"
+                        name="year" required>
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="yearTextField">length</label>
+                        <input type="text" class="form-control"
+                        id="yearTextField"
+                        placeholder="Song length"
+                        name="length" required>
+                    </div>
+    
+    
+                    <button class="btn btn-primary" type="submit">
+                        <i class="fas fa-edit"></i> Submit</button>
+                    
+                        <a href="/music" class="btn btn-warning">
+                            <i class="fas fa-undo"></i> Cancel</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
-<!--
-<!-- Content for the Add page -->
-<div class="container">
-    <div class="row">
-        <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
-
-            <form class="form" method="POST">
-                <div class="form-group">
-                    <label for="titleTextField">title</label>
-                    <input type="text" class="form-control"
-                    id="titleTextField"
-                    placeholder="Title"
-                    name="title" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="studioTextField">artist</label>
-                    <input type="text" class="form-control"
-                    id="studioTextField"
-                    placeholder="name of production studio"
-                    name="artist" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="yearTextField">year</label>
-                    <input type="text" class="form-control"
-                    id="yearTextField"
-                    placeholder="year"
-                    name="year" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="yearTextField">length</label>
-                    <input type="text" class="form-control"
-                    id="yearTextField"
-                    placeholder="song length"
-                    name="length" required>
-                </div>
 
 
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-edit"></i> Submit</button>
-                
-                    <a href="/music" class="btn btn-warning">
-                        <i class="fas fa-undo"></i> Cancel</a>
-
-            </form>
-        </div>
-
-    </div>
-</div>
--->
 
 
