--- a/server/views/music/edit.ejs
+++ b/server/views/music/edit.ejs
@@ -1,63 +1,55 @@
-<%- include('../partials/header.ejs') %>
-<%- include('../partials/navbar.ejs') %>
-
-
-<!-- edit the content to the table -->
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
-
             <form class="form" method="POST">
                 <div class="form-group">
                     <label for="titleTextField">Title</label>
                     <input type="text" class="form-control"
                     id="titleTextField"
-                    placeholder="title"
-                    name="title" 
-                    value="<%= Music.title %>"
-                    required>
+                    placeholder="Title"
+                    name="title" required>
                 </div>
 
                 <div class="form-group">
                     <label for="studioTextField">Artist</label>
                     <input type="text" class="form-control"
                     id="studioTextField"
-                    placeholder="name of artist"
-                    name="artist" 
-                    value="<%= Music.studio %>"
-                    required>
+                    placeholder="Name of production studio"
+                    name="artist" required>
+                </div>
+                
+                <div class="form-group">
+                    <label for="yearTextField">Album</label>
+                    <input type="text" class="form-control"
+                    id="yearTextField"
+                    placeholder="Album"
+                    name="album" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="publishedTextField">Year</label>
+                    <label for="yearTextField">Year</label>
                     <input type="text" class="form-control"
                     id="yearTextField"
-                    placeholder="year of brodcast"
-                    name="year" 
-                    value="<%= Music.year %>"
-                    required>
+                    placeholder="Year"
+                    name="year" required>
                 </div>
 
-                 <div class="form-group">
-                    <label for="publishedTextField">Length</label>
+                <div class="form-group">
+                    <label for="yearTextField">length</label>
                     <input type="text" class="form-control"
                     id="yearTextField"
-                    placeholder="length of the song"
-                    name="length" 
-                    value="<%= Music.length %>"
-                    required>
+                    placeholder="Song length"
+                    name="length" required>
                 </div>
-                
+
+
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
-                    <a href="/animelist" class="btn btn-warning">
+                    <a href="/music" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
-
             </form>
         </div>
-
     </div>
 </div>
-  <%- include('../partials/footer.ejs') %>
