--- a/server/views/music/add.ejs
+++ b/server/views/music/add.ejs
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title><%= title %></title>
+      <!-- Bootstrap 5.3.2 CDN -->
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -21,7 +26,7 @@
                         <label for="studioTextField">Artist</label>
                         <input type="text" class="form-control"
                         id="studioTextField"
-                        placeholder="Name of production studio"
+                        placeholder="Artist"
                         name="artist" required>
                     </div>
                     
@@ -30,7 +35,7 @@
                         <input type="text" class="form-control"
                         id="yearTextField"
                         placeholder="Album"
-                        name="album," required>
+                        name="album" required>
                     </div>
     
                     <div class="form-group">
