--- a/server/views/music/edit.ejs
+++ b/server/views/music/edit.ejs
@@ -1,3 +1,8 @@
+  <!-- Bootstrap 5.3.2 CDN -->
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
@@ -15,7 +20,7 @@
                     <label for="studioTextField">Artist</label>
                     <input type="text" class="form-control"
                     id="studioTextField"
-                    placeholder="Name of production studio"
+                    placeholder="Artist"
                     name="artist" required>
                 </div>
                 
