--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <!-- Bootstrap 5.3.2 CDN -->
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/music" class="btn btn-primary">Get Started</a> <!-- Go to music list -->
   </body>
 </html>
