--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,6 +9,8 @@
     <title><%= title %></title>
   </head>
   <body>
+    <a href="/" class="btn btn-warning btn-sm"> Home </a>
+    <a href="/music" class="btn btn-warning btn-sm"> Music </a>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <a href="/music" class="btn btn-primary">Get Started</a> <!-- Go to music list -->
