--- a/server/views/music/list.ejs
+++ b/server/views/music/list.ejs
@@ -5,6 +5,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <main class = "container">
+      <a href="/" class="btn btn-warning btn-sm"> Home </a>
+      <a href="/music" class="btn btn-warning btn-sm"> Music </a>
       <div class="row">
         <div class="col-md-offset-3">
         <h1><%= title %></h1>
