--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -8,23 +8,26 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <title><%= title %></title>
+  <style>
+
+  </style>
 </head>
 
 <body>
   <!--Header--><%- include('../views/partials/header.ejs') %>
-  <section class="py-4 py-xl-5">
-    <div class="container">
-        <div class="text-center p-4 p-lg-5">
-            <h1 class="fw-semibold mb-4">Connect over music</h1>
-            <p>Music Tracker allows you to keep track of your favorite songs and share with others!</p>
-            <% if(typeof displayName == 'string' && displayName) { %>
-                <button class="btn btn-light fs-5 me-2 py-2 px-4" type="button">Learn More</button><a href="/music" class="btn btn-primary fs-5 py-2 px-4" type="button">Music</a>
-              <% } else { %>
-                <button class="btn btn-light fs-5 me-2 py-2 px-4" type="button">Learn More</button><a href="/login" class="btn btn-primary fs-5 py-2 px-4" type="button">Get Started</a>
-              <% } %>           
-        </div>
-    </div>   
-</section>
+  <main class="bg-image" style="background-image: url('../images/bgotu.jpg'); height:100vh">
+    <section class="py-4 py-xl-5">
+      <div class="text-center p-4 p-lg-5">
+        <h1 class="fw-semibold mb-4">Connect over music</h1>
+        <p>Music Tracker allows you to keep track of your favorite songs and share with others!</p>
+        <% if(typeof displayName == 'string' && displayName) { %>
+        <a href="/music" class="btn btn-light fs-5 me-2 py-2 px-4" type="button">Music List</a><a href="/music" class="btn btn-primary fs-5 py-2 px-4" type="button">Your Profile</a>
+        <% } else { %>
+        <a href="/music" class="btn btn-light fs-5 me-2 py-2 px-4" type="button">Music List</a><a href="/login" class="btn btn-primary fs-5 py-2 px-4" type="button">Get Started</a>
+        <% } %>
+      </div>
+    </section>
+  </main>
   <!--Footer--><%- include('../views/partials/footer.ejs') %>
 </body>
 
