photo added and imploment logo

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -6,7 +6,7 @@
   <!--Navbar-->
   <nav class="navbar navbar-expand-xs bg-body-tertiary">
     <div class="container"> <!--Logo, Page Links-->
-      <a class="navbar-brand" href="/"><i class="fa-solid fa-music"></i> Music Tracker</a>
+      <a class="navbar-brand" href="/"><img src ='../images/wepik-linear-gradient-records-online-stream-music-logo-20231208003647rPWF.png' width="100" height="121"/> Music Tracker</a>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
